Guillotine lib - Library Skeleton & Create Content API (#3)

--- a/gradle.properties
+++ b/gradle.properties
@@ -1,8 +1,7 @@
 #
 # Project settings
 #
-group = com.enonic.lib
-projectName = lib-guillotine
-appName = com.enonic.lib.lib-guillotine
-xpVersion = 6.12.0
-version = 1.0.0-SNAPSHOT
+group=com.enonic.lib
+projectName=lib-guillotine
+xpVersion=6.12.0
+version=0.1.0-SNAPSHOT
