--- a/build.gradle
+++ b/build.gradle
@@ -1,12 +1,11 @@
 plugins {
     id 'java'
-    id 'maven'
-    id 'com.enonic.defaults' version '1.0.3'
-    id 'com.enonic.xp.doc' version '1.0.17'
+    id 'maven-publish'
+    id 'com.enonic.defaults' version '2.0.1'
 }
 
 dependencies {
-    compile 'com.enonic.lib:graphql:0.5.2'
+    compile 'com.enonic.lib:graphql:1.0.0-B1'
     compile "com.enonic.xp:lib-auth:${xpVersion}"
     compile "com.enonic.xp:lib-content:${xpVersion}"
     compile "com.enonic.xp:lib-portal:${xpVersion}"
