--- a/build.gradle
+++ b/build.gradle
@@ -2,19 +2,18 @@ plugins {
     id 'java'
     id 'maven-publish'
     id 'com.enonic.defaults' version '2.0.1'
+    id 'com.enonic.xp.base' version '2.0.0'
 }
 
 dependencies {
-    compile 'com.enonic.lib:graphql:1.0.0-B1'
     compile "com.enonic.xp:lib-auth:${xpVersion}"
     compile "com.enonic.xp:lib-content:${xpVersion}"
     compile "com.enonic.xp:lib-portal:${xpVersion}"
+    compile 'com.enonic.lib:lib-graphql:1.0.0-RC1'
 }
 
 repositories {
     mavenLocal()
     jcenter()
-    maven {
-        url 'http://repo.enonic.com/public'
-    }
+    xp.enonicRepo()
 }
