--- a/build.gradle
+++ b/build.gradle
@@ -8,6 +8,8 @@ plugins {
 dependencies {
     compile "com.enonic.xp:lib-auth:${xpVersion}"
     compile "com.enonic.xp:lib-content:${xpVersion}"
+    compile "com.enonic.xp:lib-context:${xpVersion}"
+    compile "com.enonic.xp:lib-node:${xpVersion}"
     compile "com.enonic.xp:lib-portal:${xpVersion}"
     compile 'com.enonic.lib:lib-graphql:1.0.0'
 }
