--- a/build.gradle
+++ b/build.gradle
@@ -9,6 +9,7 @@ dependencies {
     compile "com.enonic.xp:lib-auth:${xpVersion}"
     compile "com.enonic.xp:lib-content:${xpVersion}"
     compile "com.enonic.xp:lib-context:${xpVersion}"
+    compile "com.enonic.xp:lib-event:${xpVersion}"
     compile "com.enonic.xp:lib-node:${xpVersion}"
     compile "com.enonic.xp:lib-portal:${xpVersion}"
     compile 'com.enonic.lib:lib-graphql:1.1.0'
