--- a/build.gradle
+++ b/build.gradle
@@ -1,3 +1,18 @@
+buildscript {
+    repositories {
+        jcenter()
+        maven {
+             url "https://plugins.gradle.org/m2/"
+           }
+    }
+
+    dependencies {
+        classpath 'org.asciidoctor:asciidoctor-gradle-plugin:1.5.7'
+        classpath 'gradle.plugin.org.aim42:htmlSanityCheck:1.1.3'
+    }
+}
+
+
 plugins {
     id 'java'
     id 'maven-publish'
@@ -19,4 +34,48 @@ repositories {
     mavenLocal()
     jcenter()
     xp.enonicRepo()
+}
+
+
+apply plugin: 'org.asciidoctor.convert'
+apply plugin: 'org.aim42.htmlSanityCheck'
+
+
+
+
+
+asciidoctor {
+    sourceDir = file('docs')
+    outputDir = file('build/docs')
+
+    requires project.file('verbose-mode.rb')
+
+    attributes 'source-highlighter': 'coderay'
+
+    resources {
+        from(sourceDir) {
+            include '**/images/**'
+            include '**/media/**'
+        }
+    }
+}
+
+def htmlOutputPath = "$buildDir/docs/html5"
+
+htmlSanityCheck {
+
+    dependsOn asciidoctor
+
+    sourceDir = new File( htmlOutputPath )
+
+    // filter files to check - in Set-notation
+    //sourceDocuments = [ "index.html"]
+
+    // where to put results of sanityChecks...
+    checkingResultsDir = new File( "$buildDir/report/htmlchecks" )
+
+    //checkExternalLinks = false
+
+    // fail build on errors?
+    //failOnErrors = true
 }
