Let processHtml() process macros like it does in Portal lib #71

--- a/build.gradle
+++ b/build.gradle
@@ -22,6 +22,7 @@ plugins {
 }
 
 dependencies {
+    compileOnly "com.enonic.xp:portal-api:${xpVersion}"
     compileOnly "com.enonic.xp:script-api:${xpVersion}"
 
     compile "com.enonic.xp:lib-auth:${xpVersion}"
@@ -40,7 +41,7 @@ dependencies {
 repositories {
     mavenLocal()
     jcenter()
-    xp.enonicRepo('dev')
+    xp.enonicRepo( 'dev' )
 }
 
 jacocoTestReport {
