--- a/build.gradle
+++ b/build.gradle
@@ -31,6 +31,7 @@ dependencies {
     compile "com.enonic.xp:lib-node:${xpVersion}"
     compile "com.enonic.xp:lib-portal:${xpVersion}"
     compile "com.enonic.xp:lib-common:${xpVersion}"
+    compile "com.enonic.xp:lib-websocket:${xpVersion}"
     compile 'com.enonic.lib:lib-graphql:1.2.0'
 
     testImplementation 'org.junit.jupiter:junit-jupiter:5.7.0'
