--- a/.github/workflows/enonic-gradle.yml
+++ b/.github/workflows/enonic-gradle.yml
@@ -8,24 +8,27 @@ jobs:
     runs-on: ubuntu-latest
 
     needs: release_notes
-
+    if: always()
     steps:
-      - uses: actions/checkout@v2.3.4
+      - uses: actions/checkout@v2
 
-      - uses: actions/setup-java@v1
+      - uses: actions/setup-java@v2
         with:
           java-version: 11
+          distribution: 'adopt'
 
-      - uses: actions/cache@v2.1.4
+      - uses: actions/cache@v2
         with:
-          path: ~/.gradle/caches
-          key: ${{ runner.os }}-gradle-${{ hashFiles('**/*.gradle') }}
+          path: |
+            ~/.gradle/caches
+            ~/.gradle/wrapper
+          key: ${{ runner.os }}-gradle-${{ hashFiles('**/*.gradle*', '**/gradle-wrapper.properties') }}
           restore-keys: |
             ${{ runner.os }}-gradle-
 
-      - run: ./gradlew build
+      - run: ./gradlew build -Pcom.enonic.xp.app.production=true
 
-      - uses: codecov/codecov-action@v1.3.1
+      - uses: codecov/codecov-action@v1
 
       ### PUBLISHING STEPS ###
 
@@ -42,7 +45,7 @@ jobs:
 
       - name: Publish
         if: ${{ github.ref == 'refs/heads/master' }}
-        run: ./gradlew publish -PrepoKey=${{ steps.publish_vars.outputs.repo }} -PrepoUser=${{ secrets.ARTIFACTORY_USERNAME }} -PrepoPassword=${{ secrets.ARTIFACTORY_PASSWORD }}
+        run: ./gradlew publish -Pcom.enonic.xp.app.production=true -PrepoKey=${{ steps.publish_vars.outputs.repo }} -PrepoUser=${{ secrets.ARTIFACTORY_USERNAME }} -PrepoPassword=${{ secrets.ARTIFACTORY_PASSWORD }}
 
       - name: Download changelog
         if: steps.publish_vars.outputs.release == 'true'
@@ -71,17 +74,16 @@ jobs:
 
       - name: Commit and push new version
         if: steps.publish_vars.outputs.release == 'true'
-        uses: EndBug/add-and-commit@v7.1.0
+        uses: EndBug/add-and-commit@v7
         with:
           add: ./gradle.properties
           message: 'Updated to next SNAPSHOT version'
-        env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
 
   release_notes:
     runs-on: ubuntu-latest
+    if: "(github.ref == 'refs/heads/master')"
     steps:
-      - uses: actions/checkout@v2.3.4
+      - uses: actions/checkout@v2
         with:
           fetch-depth: 0
 
@@ -90,7 +92,6 @@ jobs:
         run: |
           PREVIOUS_RELEASE_TAG=$(git tag --sort=-version:refname --merged | grep -E '^v([[:digit:]]+\.){2}[[:digit:]]+$' | head -1)
           echo ::set-output name=previous_release_tag::$PREVIOUS_RELEASE_TAG
-
       - name: Generate Release Notes
         uses: enonic/release-tools/generate-changelog@master
         env:
