--- a/build.gradle
+++ b/build.gradle
@@ -1,24 +1,11 @@
-buildscript {
-    repositories {
-        jcenter()
-        maven {
-             url "https://plugins.gradle.org/m2/"
-           }
-    }
-
-    dependencies {
-        classpath 'org.asciidoctor:asciidoctor-gradle-plugin:1.6.1'
-        classpath 'gradle.plugin.org.aim42:htmlSanityCheck:1.1.3'
-    }
-}
-
-
 plugins {
     id 'java'
     id 'jacoco'
     id 'maven-publish'
     id 'com.enonic.defaults' version '2.0.1'
     id 'com.enonic.xp.base' version '3.0.0'
+    id 'org.asciidoctor.jvm.convert' version '3.3.2'
+    id "org.aim42.htmlSanityCheck" version '1.1.6'
 }
 
 dependencies {
@@ -41,7 +28,7 @@ dependencies {
 
 repositories {
     mavenLocal()
-    jcenter()
+    mavenCentral()
     xp.enonicRepo( 'dev' )
 }
 
@@ -58,41 +45,24 @@ test {
     useJUnitPlatform()
 }
 
-apply plugin: 'org.asciidoctor.convert'
-apply plugin: 'org.aim42.htmlSanityCheck'
+def docsDir = file("${buildDir}/docs")
 
 asciidoctor {
-    sourceDir = file('docs')
-    outputDir = file('build/docs')
-
-    requires project.file('verbose-mode.rb')
+    sourceDir = file( 'docs' )
+    outputDir = docsDir
 
     attributes 'source-highlighter': 'coderay'
 
     resources {
-        from(sourceDir) {
+        from( sourceDir ) {
             include '**/images/**'
             include '**/media/**'
         }
     }
 }
 
-def htmlOutputPath = "$buildDir/docs/html5"
-
 htmlSanityCheck {
-
     dependsOn asciidoctor
 
-    sourceDir = new File( htmlOutputPath )
-
-    // filter files to check - in Set-notation
-    //sourceDocuments = [ "index.html"]
-
-    // where to put results of sanityChecks...
-    checkingResultsDir = new File( "$buildDir/report/htmlchecks" )
-
-    //checkExternalLinks = false
-
-    // fail build on errors?
-    //failOnErrors = true
+    sourceDir = docsDir
 }
