--- a/gradle.properties
+++ b/gradle.properties
@@ -3,5 +3,5 @@
 #
 group=com.enonic.lib
 projectName=lib-guillotine
-xpVersion=7.7.0
-version=6.0.0-SNAPSHOT
+xpVersion=7.11.0-SNAPSHOT
+version=6.0.2-SNAPSHOT
