--- a/build.gradle
+++ b/build.gradle
@@ -23,6 +23,7 @@ dependencies {
     compile 'com.enonic.lib:lib-graphql:2.0.2'
 
     testImplementation 'org.junit.jupiter:junit-jupiter:5.9.1'
+    testImplementation 'org.mockito:mockito-core:4.10.0'
     testImplementation "com.enonic.xp:testing:${xpVersion}"
 }
 
