--- a/gradle.properties
+++ b/gradle.properties
@@ -3,5 +3,5 @@
 #
 group=com.enonic.lib
 projectName=lib-guillotine
-xpVersion=7.11.0
-version=6.1.0-SNAPSHOT
+xpVersion=7.12.0-B1
+version=6.1.0-B2
