--- a/build.gradle
+++ b/build.gradle
@@ -12,15 +12,15 @@ dependencies {
     compileOnly "com.enonic.xp:portal-api:${xpVersion}"
     compileOnly "com.enonic.xp:script-api:${xpVersion}"
 
-    compile "com.enonic.xp:lib-auth:${xpVersion}"
-    compile "com.enonic.xp:lib-content:${xpVersion}"
-    compile "com.enonic.xp:lib-context:${xpVersion}"
-    compile "com.enonic.xp:lib-event:${xpVersion}"
-    compile "com.enonic.xp:lib-node:${xpVersion}"
-    compile "com.enonic.xp:lib-portal:${xpVersion}"
-    compile "com.enonic.xp:lib-common:${xpVersion}"
-    compile "com.enonic.xp:lib-websocket:${xpVersion}"
-    compile 'com.enonic.lib:lib-graphql:2.1.0'
+    implementation "com.enonic.xp:lib-auth:${xpVersion}"
+    implementation "com.enonic.xp:lib-content:${xpVersion}"
+    implementation "com.enonic.xp:lib-context:${xpVersion}"
+    implementation "com.enonic.xp:lib-event:${xpVersion}"
+    implementation "com.enonic.xp:lib-node:${xpVersion}"
+    implementation "com.enonic.xp:lib-portal:${xpVersion}"
+    implementation "com.enonic.xp:lib-common:${xpVersion}"
+    implementation "com.enonic.xp:lib-websocket:${xpVersion}"
+    implementation 'com.enonic.lib:lib-graphql:2.1.0'
 
     testImplementation 'org.junit.jupiter:junit-jupiter:5.10.1'
     testImplementation 'org.mockito:mockito-core:5.9.0'
@@ -35,8 +35,8 @@ repositories {
 
 jacocoTestReport {
     reports {
-        xml.enabled = true
-        html.enabled = true
+        xml.required = true
+        html.required = true
     }
 }
 
